cli/tests/snapshot/inputs/errors/field_access_under_domain_contract.ncl
# capture = 'stderr'
# command = ['eval']
let f | { name | String } -> String = fun x => x.name in f {}
